fixed the none bolding issue on safari

--- a/source/stylesheets/_global.scss
+++ b/source/stylesheets/_global.scss
@@ -8,7 +8,7 @@ html {
   src: url('../images/fonts/SofiaProBlack.eot?#iefix') format('embedded-opentype'),
     url('../images/fonts/SofiaProBlack.woff') format('woff'),
     url('../images/fonts/SofiaProBlack.ttf') format('truetype');
-  font-weight: 900;
+  font-weight: normal;
   font-style: normal;
 }
 
@@ -18,6 +18,6 @@ html {
   src: url('../images/fonts/SofiaProBlack-Italic.eot?#iefix') format('embedded-opentype'),
     url('../images/fonts/SofiaProBlack-Italic.woff') format('woff'),
     url('../images/fonts/SofiaProBlack-Italic.ttf') format('truetype');
-  font-weight: 900;
+  font-weight: normal;
   font-style: italic;
 }
